9/11/20 Project started
9/12/20 Added docs, initialized CommandLine, Actions, FileInt classes