@@ -5,7 +5,8 @@
 #include "Actions.h"
 
 Actions::Actions() :
-    itsFile(new std::ifstream())
+    itsFile(new std::ifstream()),
+    itsCmd(new CommandLine())
 {
 
 }
@@ -43,50 +44,56 @@ std::string Actions::help() {
 }
 
 std::string Actions::createCat() {
-    std::string name, pwd;
-    std::cout << "Category name: ";
-    std::cin >> name;
-    std::cout << "Category password: ";
-    std::cin >> pwd;
+    std::string name = itsCmd->getInfo("Category name: ");
+    std::string pwd = itsCmd->getInfo("Category password: ");
     system(("cd ~/.controls/data/ && touch init && mv '" + name + ".zip' ../backup/ && zip -e -P '" + pwd +
         "' '" + name + ".zip' init && rm init").c_str());
 
     return name;
 }
 
-std::string Actions::createFile() {
-    std::string name, cat, data, pwd;
-    std::cout << "Category name: ";
-    std::cin >> cat;
-    std::cout << "Category password: ";
-    std::cin >> pwd;
-    std::cout << "File name: ";
-    std::cin >> name;
-    std::cout << "File data: ";
-    std::cin >> data;
-    system(("cd ~/.controls/data/ && unzip -P '" + pwd + "' '" + cat + ".zip' -d ../build/ " +
-        "rm ../build/init && echo '" + data + "' >> ../build/'" + name + "' && zip -e -P '" + pwd + "' '" + cat +
-            ".zip' ../build/* && rm -rf ../build/*").c_str());
+std::string Actions::writeFile() {
+    std::string cat = itsCmd->getInfo("Category name: ");
+    std::string pwd = itsCmd->getInfo("Category password: ");
+    std::string name = itsCmd->getInfo("File name: ");
+    std::string data = itsCmd->getInfo("File data: ");
+    system(("cd ~/.controls/data/ && unzip -P '" + pwd + "' '" + cat + ".zip' -d ../build/ && " +
+        "rm ../build/init && mv '" + name + "' ../backup/ && echo '" + data + "' >> ../build/'" + name +
+            "' && zip -e -P '" + pwd + "' '" + cat +
+                ".zip' ../build/* && rm -rf ../build/*").c_str());
 
     return name;
 }
 
 std::string Actions::listCat() {
-    std::string name, pwd;
-    std::cout << "Category name: ";
-    std::cin >> name;
-    std::cout << "Category password: ";
+    system("cd ~/.controls/data/ && rm ../controls/count && ls >> ../controls/count");
+    itsFile->open("~/.controls/controls/count");
+    std::string out, el;
+    char ex[255];
+    while (getline(itsFile, el)) {
+        for (int i = 0; i < el.size(); i++) {
+            if (i == el.size()-3) {
+                break;
+            }
+            ex[i] = el.at(i);
+        }
+        out.append(ex);
+    }
+    itsFile->close();
+    std::cout << out;
+
+    return out;
+}
+
+std::string Actions::listCat(bool files) {
+    std::string name = itsCmd->getInfo("Category name: ");
+    std::string pwd = itsCmd->getInfo("Category password: ");
     std::cin >> pwd;
     system(("cd ~/.controls/data/ && unzip -P '" + pwd + "' '" + name + ".zip' -d ../build/ && "
         "cd ~/.controls/build/ && rm ../controls/count && ls >> ../controls/count && cd .. && rm -rf build/*").c_str());
     itsFile->open("~/.controls/controls/count");
     std::string out, el;
     while (getline(itsFile, el)) {
-        for (int i = 0; i < el.size(); i++) {
-            if (i == el.size()-3) {
-                break;
-            }
-        }
         out.append(el);
     }
     itsFile->close();
@@ -96,13 +103,9 @@ std::string Actions::listCat() {
 }
 
 std::string Actions::listFile() {
-    std::string cat, name, pwd;
-    std::cout << "Category name: ";
-    std::cin >> cat;
-    std::cout << "Category password: ";
-    std::cin >> pwd;
-    std::cout << "File name: ";
-    std::cin >> name;
+    std::string cat = itsCmd->getInfo("Category name: ");
+    std::string pwd = itsCmd->getInfo("Category password: ");
+    std::string name = itsCmd->getInfo("File name: ");
     system(("cd ~/.controls/data/ && unzip -P '" + pwd + "' '" + cat + ".zip' -d ../build/ && "
         "cd ~/.controls/build/ && rm ../controls/file && cat '" + name +
             "' >> ../controls/file && cd .. && rm -rf build/*").c_str());
@@ -118,9 +121,7 @@ std::string Actions::listFile() {
 }
 
 std::string Actions::rmCat() {
-    std::string name;
-    std::cout << "Category name: ";
-    std::cin >> name;
+    std::string name = itsCmd->getInfo("Category name: ");
     system(("cd ~/.controls/data/ && rm ../.controls/controls/rm && rm '" + name +
         ".zip' 2> ../controls/rm").c_str());
     itsFile->open("~/.controls/controls/rm");
@@ -135,13 +136,9 @@ std::string Actions::rmCat() {
 }
 
 std::string Actions::rmFile() {
-    std::string cat, name, pwd;
-    std::cout << "Category name: ";
-    std::cin >> cat;
-    std::cout << "Category password: ";
-    std::cin >> pwd;
-    std::cout << "File name: ";
-    std::cin >> name;
+    std::string cat = itsCmd->getInfo("Category name: ");
+    std::string pwd = itsCmd->getInfo("Category password: ");
+    std::string name = itsCmd->getInfo("File name: ");
     system(("cd ~/.controls/data/ && unzip -P '" + pwd + "' '" + cat + ".zip' -d ../build/ && rm ../controls/rm"
         " && rm ../build/'" + name + "' 2> ../controls/rm  && zip -e -P '" + pwd + "' '" + cat +
             ".zip' ../build/* && rm -rf ../build/*").c_str());
