@@ -13,6 +13,8 @@
 class CommandLine {
 public:
     CommandLine(int c, char *v[]);
+    CommandLine();
+    std::string getInfo(std::string name);
     inline std::string getCommand() const;
     inline std::string getArgument() const;
     inline int getCount() const;
