@@ -1,2 +1,4 @@
 9/11/20 Project started
 9/12/20 Added docs, initialized CommandLine, Actions, FileInt classes
+9/19/20 Actions realization, FileInt deletion
+9/20/20 Actions rework, CommandLine rework
